Get unit tests working in Maven build
Had to update to the latest release of maven-surefire-plugin. Configured it
to run the tests twice: once on the classpath, and once on the modulepath.
Would be nice to run them a third time with a Java 8 JVM, but this is good
enough for now.